remove map interactivy to avoid problems on mobile

--- a/src/css/blocs/map.scss
+++ b/src/css/blocs/map.scss
@@ -1,5 +1,9 @@
 .map {
-  margin: 75px 0;
+  margin: 25px 0;
+
+  @include large {
+    margin: 75px 0 100px;
+  }
 }
 
 .map__title {
@@ -12,14 +16,4 @@
 .map__instructions {
   opacity: 0.7;
   font-size: 14px;
-}
-
-.map__inner:hover {
-  display: block;
-  overflow: auto;
-  height: 637px;
-
-  img {
-    max-width: none;
-  }
 }
